--- a/jenkins-srv.yaml
+++ b/jenkins-srv.yaml
@@ -22,12 +22,19 @@ spec:
       labels:
         app: jenkins-1
     spec:
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            preference:
+              matchExpressions:
+              - key: kubernetes.io/hostname
+                operator: In
+                values:
+                - k8s-agent-309f2876-1
       containers:
       - name: jenkins-container
         image: zackliu1995/jenkins
-        env:
-        - name: JAVA_OPTS
-          value: "-Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=8000,suspend=n"
         volumeMounts:
         - name: azure
           mountPath: /var/jenkins_home
@@ -36,9 +43,6 @@ spec:
         ports:
           - name: port8080
             containerPort: 8080
-            protocol: TCP
-          - name: port8000
-            containerPort: 8000
             protocol: TCP
           - name: port50000
             containerPort: 50000
@@ -49,28 +53,24 @@ spec:
         - name: azure
           persistentVolumeClaim:
             claimName: azdisk
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: jenkins-srv
-spec:
-  selector:
-    app: jenkins-1
-  ports:
-    - name: http
-      port: 80
-      protocol: TCP
-      targetPort: 8080
-    - name: debug
-      port: 8000
-      protocol: TCP
-      targetPort: 8000
-    - name: slave
-      port: 50000
-      protocol: TCP
-      targetPort: 50000
-    - name: ssh
-      port: 22
-      targetPort: 22
-  type: LoadBalancer
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: jenkins-srv
+# spec:
+#   selector:
+#     app: jenkins-1
+#   ports:
+#     - name: http
+#       port: 80
+#       protocol: TCP
+#       targetPort: 8080
+#     - name: slave
+#       port: 50000
+#       protocol: TCP
+#       targetPort: 50000
+#     - name: ssh
+#       port: 22
+#       targetPort: 22
+#   type: LoadBalancer
